<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RemLoc</string>

    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="places">Places</string>
    <string name="actions">Actions</string>
    <string name="game_miejska">City Game</string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="add">Add</string>
    <string name="search_location">Search location</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="select_contact">Select contact:</string>
    <string name="enter_your_text_message">Enter your message</string>
    <string name="select_place">Select a place:</string>
    <string name="save_action">Save action</string>
    <string name="place_name">Place name</string>
    <string name="sms_text">Sms text</string>
    <string name="coordinates">Coordinates</string>
    <string name="remove_action">Remove Action</string>
    <string name="edit_sms_text">Edit sms text</string>
    <string name="edit_phone_number">Edit phone number</string>
    <string name="change_place">Change place:</string>
    <string name="save_changes">Save changes</string>
    <string name="address">Address</string>
    <string name="remove_place">Remove Place</string>
    <string name="edit_place_name">Edit place name</string>
    <string name="coming_soon">Coming soon</string>
    <string name="help_feedback">Help, Feedback</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="home">Home</string>

    <string name="choose_language">Choose language:</string>
    <string name="change_language">Change language</string>
    <string name="edit_action">Edit action</string>
    <string name="edit_place">Edit place</string>
    <string name="add_action">Add action</string>

    <string name="choose_place">Choose place</string>
    <string name="choose_contact">Choose contact</string>
    <string name="already_selected">Language already selected</string>
    <string name="provide_label">Enter the title</string>
    <string name="place">Place</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="change_contact">Change contact:</string>
    <string name="select_type_of_action">Select type of action</string>
    <string name="sms">Sms</string>
    <string name="mute_the_sound">Mute the sound</string>
    <string name="notification">Notification</string>
    <string name="select">Select</string>
    <string name="find_place">Find place</string>
    <string name="language">Language</string>
    <string name="action_type">Action type</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="list_of_places">List of places</string>
    <string name="permissions">Permissions</string>
    <string name="location">Location</string>
    <string name="contacts">Contacts</string>
    <string name="if_you_want_to_deny_a_permission_you_need_to_go_to">If you want to deny a permission, you need to go to:</string>
    <string name="settings_apps_remloc_permissions"><![CDATA[Settings > Apps > RemLoc > Permissions]]></string>
    <string name="delete_all_data_from_app">Delete all data from app</string>
    <string name="label">Label</string>
    <string name="use_the_default_value">Use the default value</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="success">Success</string>
    <string name="failed_to_upd_data">Failed to update data</string>
    <string name="set_parameters">Set all of the parameters</string>
    <string name="failed">Failed</string>
    <string name="succ_deleted">Successfully deleted</string>
    <string name="failed_to_delete">Failed to delete</string>
    <string name="log_out">Logging Out</string>
    <string name="contact_name_and_phone_number">Contact name and phone number</string>
    <string name="log_in">Logging In</string>
    <string name="deleting">Deleting</string>
    <string name="you_sure_del_data">You sure you want to delete all of the data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cant_find">Can\'t find the location, please try another!</string>
    <string name="check">check</string>
    <string name="firebase_database_url" translatable="false">https://remloc1-fbe72-default-rtdb.europe-west1.firebasedatabase.app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_to_remloc">Welcome to RemLoc</string>
    <string name="change_default_trigger_distance">Change default trigger distance</string>
    <string name="stop_tracking_location">Stop tracking Location</string>
    <string name="start_tracking_location">Start tracking Location</string>
    <string name="m">m</string>
    <string name="to_use_the_application_please_provide_us_a_permissions">To use the application, please provide us a permissions!</string>
    <string name="next">Next</string>
    <string name="choose_your_theme">Choose your theme</string>
    <string name="what_problem_feedback_do_you_have">What problem/feedback do you have?</string>
    <string name="send_an_a_email">Send an a email</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="choose_theme">Choose theme</string>
    <string name="select_city">Select game</string>
    <string name="game_suggest">Suggest a game</string>
    <string name="user_manual">User manual</string>
    <string name="claim">Claim!</string>
    <string name="nice_job_to_move_on_you_need_to_claim_this_place">Nice job! To move on you need to claim this place!</string>
    <string name="you_fo_to_the">You came to</string>
    <string name="congrats_score">Great job, you beat our game. Congratulations your score is</string>
    <string name="exit_button">End game!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="divider">" - "</string>
    <string name="your_scores">Your scores:</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_on_off">Turn on/off</string>
    <string name="hint_5_points">Hint (-5 points)</string>
    <string name="exit_the_game">Exit the game</string>
    <string name="miejsce">Place №</string>
    <string name="please_wait">Please wait, it may take a few seconds...</string>
    <string name="welcome_to">Welcome to</string>
    <string name="start_game">Start game</string>
    <string name="city_game">City Game</string>
    <string name="theme">Theme</string>
    <string name="remove">Delete</string>
    <string name="delete_data_for_sure">You definitely want to delete all app data?</string>
    <string name="location_tracking">Location tracking</string>
    <string name="checking_for_back_loc_track">Background location check</string>
    <string name="add_place">+ Add a place</string>
    <string name="choose_place_to_play">Choose a place to play</string>
    <string name="delete_acc_for_sure">You definitely want to delete your account?</string>
    <string name="location_warning">Location tracking is disabled!\n If you want to track your actions, go to Settings and turn on Location Tracking</string>
    <string name="choose_app_language">Choose app language</string>
    <string name="location_tracking__">Location tracking...</string>
    <string name="notifiaction_location">Location is tracked, you can turn it off in the app!</string>
    <string name="account_settings">Account settings</string>
    <string name="want_to_create_your_own_game">Want to create your own game?</string>
    <string name="create">Create</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="dashboard">Dashboard</string>
    <string name="dashboard_title">Overview</string>
    <string name="dashboard_subtitle">Your location reminders at a glance.</string>
    <string name="dashboard_summary">You currently track %1$d places.</string>
    <string name="dashboard_activity">Activity health</string>
    <string name="dashboard_active">Active automations</string>
    <string name="dashboard_active_ratio">%1$d%% of actions are active</string>
    <string name="dashboard_active_ratio_default">0% of actions are active</string>
    <string name="dashboard_tracking_ready">Tracking is ready</string>
    <string name="dashboard_tracking_disabled">Tracking needs attention</string>
    <string name="dashboard_quick_actions">Quick actions</string>
    <string name="dashboard_open_places">Open places map</string>
    <string name="dashboard_open_actions">Review actions</string>
    <string name="dashboard_open_settings">Open settings</string>


    <string name="pin_drop">Pin Drop</string>
    <string name="pin_drop_how_to">Tap to drop the pin on the moving targets!</string>
    <string name="pin_drop_tap_to_start">Tap to start</string>
    <string name="pin_drop_tap_to_retry">Tap to play again</string>
    <string name="pin_drop_score">Score</string>
    <string name="pin_drop_best">Best</string>
    <string name="pin_drop_combo">Combo</string>
    <string name="pin_drop_game_over">Game over</string>
    <string name="pin_drop_new_best">New best score!</string>
    <string name="pin_drop_miss">Miss!</string>
</resources>
