<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_baseline_home_work_24"
            android:title="@string/places"/>

        <item
            android:id="@+id/nav_actions"
            android:icon="@drawable/ic_baseline_view_list_24"
            android:title="@string/actions"/>

        <item
            android:id="@+id/nav_game_miejska"
            android:icon="@drawable/ic_baseline_place_24"
            android:title="@string/game_miejska"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_help_review"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/help_and_feedback"/>

    </group>

        <item android:title="@string/profile">
            <menu>
                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/ic_baseline_logout_24"
                        android:title="@string/logout"/>

                </group>

            </menu>
        </item>


</menu>