<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/placeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/you_fo_to_the"
        android:layout_gravity="center_horizontal"/>

    <TextView

        android:layout_marginVertical="10dp"
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:text="@string/nice_job_to_move_on_you_need_to_claim_this_place"
        android:layout_gravity="center_horizontal"/>


    <Button
        android:layout_marginVertical="10dp"
        android:id="@+id/buttonClaim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/claim"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>